--- a/source/styles.css
+++ b/source/styles.css
@@ -8,6 +8,7 @@
 body{
     font-family: poppins, sans-serif;
     font-weight: 100;
+    background-color: white;
 }
 
 .title{
@@ -20,47 +21,45 @@ body{
     pointer-events: none;
 }
 
-.flex-container{
-    height: 60vh;
-    display: flex;
-    flex-direction: row;
+.container{
+    height: auto;
+    margin: 3rem;
     position: relative;
-    flex-wrap: wrap;
     margin-top: 2em;
-}
-.flex-item{
-    width: 50%;
-    border: 1px solid gray;
-}
-.item1{
-    border-top-right-radius: 10px;
-}
-.item2{
-    padding: 15px;
-    border-top-left-radius: 10px;
 
 }
-
-.item1 video{
-    height: 100%;
-    width: 100%;
+.box{
+    display: grid;
+    place-content: center;
 }
-.item2 img{
-    height: 100%;
-    width: 100%;
+.video{
+    height: 200px;
+    width: 400px;
+    cursor: zoom-in;
+}
+.shadow{
+    box-shadow: 
+        0px 0px 10px rgba(0, 0, 0, 0.15),
+        0px 0px 10px rgba(0, 0, 0, 0.15);
+}
+
+.image{
+    height: 200px;
+    width: 400px;
+    margin-inline: auto;
+  
+}
+figcaption{
+    color: black;
+    font-weight: 400;
+    text-align: center;
 }
 
 /* buttons  */
 .buttons{
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: .5em;
     text-align: center;
-    background-color: white;
     border-radius: 100vmax;
-    box-shadow: 0px 0px 10px white;
+    margin: 1.5em 0px;
 }
 button{
     padding: .5em .8em;
@@ -75,10 +74,16 @@ button{
     color: white;
 
 }
+.start-webcam-btn:hover{
+    background-color: rgb(0, 128, 255);
+}
 .capture-btn{
     background-color: orange;
     color: white;
     text-shadow: 0px 0px 5px black;
+}
+.capture-btn:hover{
+    background-color: rgb(255, 143, 5);
 }
 .disabled-btn{
     cursor: not-allowed;
